Bio html and css

--- a/hw1/resume.html
+++ b/hw1/resume.html
@@ -18,15 +18,15 @@
 <li> Minor in Computer Science, expected May 2014 </li>
 <li> Concentration in Spanish (equivalent to 8 semesters), with foreign study in Spain during Spring of 2013 </li>
 <li id="gpa"> GPA: 3.93./4.00 </li>
-<li> <span class="italic"> Clinical Psychology Courses: </span> Research Methods in Clinical Psychology, Seminar in Clinical Psychology, Clinical Methods, Abnormal Psychology, Personal&#150;Social Child Development, Statistics for Behavioral Sciences </li>
+<li> <span class="italic"> Clinical Psychology Courses: </span> Research Methods in Clinical Psychology, Seminar in Clinical Psychology, Clinical Methods, Abnormal Psychology, Personal&#150Social Child Development, Statistics for Behavioral Sciences </li>
 <li> <span class="italic">Computer Science Courses: Data Structures</span>, Discrete Mathematics, Programming Languages, Object Oriented Programming for Graphical User Interfaces </li>
 </ul>
 </p>
 
 
 <h2> Work Experience </h2>
-<h3> <span class="bold">Center for Addiction Medicine</span>, Massachusetts General Hospital&#150;Harvard Center </h3>
-<span class="italic"> Research Intern</span>, September 2013 &#151;	 Present
+<h3> <span class="bold">Center for Addiction Medicine</span>, Massachusetts General Hospital&#150Harvard Center </h3>
+<span class="italic"> Research Intern</span>, September 2013 &#151	 Present
 <ul>
 <li> Facilitate research operations through data entry, patient scheduling, and office management </li>
 </ul>
