--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello world
+<!doctype html>
+
+<html>
+
+<head>
+	<title> Connor McCann </title>
+	<link rel="stylesheet" href="index.css" type="text/css" />
+</head>
+
+<body>
+	<h1> Connor McCann </h1>
+	<p><a href="cjmccann.github.io/hw1/resume.html"> Resume </a></p>
+	<p><a href="cjmccann.github.io/hw1/bio.html"> Bio </a> </p>
+	<p> <img src="cjm.jpg" alt="CJM Picture" /></p>
+</body>
+
+</html>
