index files corrected

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
 	<h1> Connor McCann </h1>
-	<p><a href="cjmccann.github.io/hw1/resume.html"> Resume </a></p>
-	<p><a href="cjmccann.github.io/hw1/bio.html"> Bio </a> </p>
+	<p><a href="/hw1/resume.html"> Resume </a></p>
+	<p><a href="/hw1/bio.html"> Bio </a> </p>
 	<p> <img src="cjm.jpg" alt="CJM Picture" /></p>
 </body>
 
