Included character encoding

--- a/hw1/resume.html
+++ b/hw1/resume.html
@@ -4,6 +4,7 @@
 
 <head>
 	<title> Connor McCann Resume </title>
+	<meta charset='utf-8'>
 	<link rel="stylesheet" href="resume.css" type="text/css" />
 
 </head>
