--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
 	<title> Connor McCann </title>
+	<meta charset='utf-8'>
 	<link rel="stylesheet" href="index.css" type="text/css" />
 </head>
 
