Character encoding still broken... :/

--- a/hw1/resume.html
+++ b/hw1/resume.html
@@ -19,35 +19,33 @@
 <li> Minor in Computer Science, expected May 2014 </li>
 <li> Concentration in Spanish (equivalent to 8 semesters), with foreign study in Spain during Spring of 2013 </li>
 <li id="gpa"> GPA: 3.93./4.00 </li>
-<li> <span class="italic"> Clinical Psychology Courses: </span> Research Methods in Clinical Psychology, Seminar in Clinical Psychology, Clinical Methods, Abnormal Psychology, Personal&#150Social Child Development, Statistics for Behavioral Sciences </li>
+<li> <span class="italic"> Clinical Psychology Courses: </span> Research Methods in Clinical Psychology, Seminar in Clinical Psychology, Clinical Methods, Abnormal Psychology, Personal&#8211;Social Child Development, Statistics for Behavioral Sciences </li>
 <li> <span class="italic">Computer Science Courses: Data Structures</span>, Discrete Mathematics, Programming Languages, Object Oriented Programming for Graphical User Interfaces </li>
 </ul>
-</p>
-
 
 <h2> Work Experience </h2>
-<h3> <span class="bold">Center for Addiction Medicine</span>, Massachusetts General Hospital&#150Harvard Center </h3>
-<span class="italic"> Research Intern</span>, September 2013 &#151	 Present
+<h3> <span class="bold">Center for Addiction Medicine</span>, Massachusetts General Hospital&#8211;Harvard Center </h3>
+<span class="italic"> Research Intern</span>, September 2013 &#8212;	 Present
 <ul>
 <li> Facilitate research operations through data entry, patient scheduling, and office management </li>
 </ul>
 
 
 <h3> <span class="bold">Edwin Ginn Library</span>, Tufts University </h3> 
-<span class="italic">Circulation Desk Aid</span>, September 2012 &#151;	 August 2013
+<span class="italic">Circulation Desk Aid</span>, September 2012 &#8212;	 August 2013
 <ul>
 <li> Assisted patrons of library with checking out books and using library equipment</li>
 </ul>
 
 <h3> <span class="bold">Boston School of Occupational Therapy</span>, Tufts University </h3>
- <span class="italic">Office Assistant</span>, September 2012 &#151; December 2012
+ <span class="italic">Office Assistant</span>, September 2012 &#8212; December 2012
 <ul>
 <li> Managed daily operations at department front desk</li>
 </ul>
 
 
 <h3> <span class="bold">Schizophrenia Aftercare Research Program</span>, University of California, Los Angeles </h3>
- <span class="italic">UCLA Health System Student Volunteer</span>, May 2012 &#151; August 2012
+ <span class="italic">UCLA Health System Student Volunteer</span>, May 2012 &#8212; August 2012
 <ul>
 <li> Acted as peer mentor for patients participating in cognitive remediation research project</li>
 <li> Aided organization, execution, and management of lab operations </li>
@@ -55,14 +53,14 @@
 
 
 <h3> <span class="bold">Tufts Literacy Corps</span>, Tufts University</h3>
- <span class="italic">Corps Member</span>, September 2011 &#151; May 2012
+ <span class="italic">Corps Member</span>, September 2011 &#8212; May 2012
 <ul>
 <li> Tutored reading and writing in 3rd grade classroom at Arthur D. Healey School in Somerville, MA</li>
 </ul>
 
 
 <h3><span class="bold"> Private Practice of Clinical Psychologist Mary K. Rotzien, Ph. D.</span>, Pasadena, CA</h3>
-<span class="italic"> Office Manager</span>, May 2011 &#151; August 2011
+<span class="italic"> Office Manager</span>, May 2011 &#8212; August 2011
 <ul>
 <li>Managed private practice billing, insurance, taxes, and administrative duties; maintained and updated website</li>
 </ul>
@@ -70,18 +68,18 @@
 
 <h2> Community Service </h2>
 <h3> <span class="bold">Sigma Phi Epsilon</span>, Tufts Mass Zeta Chapter</h3>
-<span class="italic">Vice President of Brotherhood Development</span>, January 2012 &#151; Present 
+<span class="italic">Vice President of Brotherhood Development</span>, January 2012 &#8212; Present 
 <ul>
 <li> Organize brotherhood bonding events like camping, dinners, weekend retreat, paintball</li>
 </ul>
-<span class="italic">Philanthropy Chair</span>, September 2011 &#151= December 2011
+<span class="italic">Philanthropy Chair</span>, September 2011 &#8212; December 2011
 <ul>
 <li>Arranged participation in Boston Walk to Defeat ALS, pumpkin carving at local elementary school</li>
 </ul>
 
 
 <h3> <span class="bold">Tufts Relay for Life with the American Cancer Society</span>, Tufts University</h3>
-<span class="italic"> Team Development Committee Member</span>, October 2011 &#151; Present
+<span class="italic"> Team Development Committee Member</span>, October 2011 &#8212; Present
 <ul>
 <li>Help recruit teams and members to raise money for event</li>
 </ul>
@@ -94,4 +92,4 @@
 </ul>
 
 <h2> Athletics </h2>
-<h3><span class="bold"> Club Baseball</span>, Tufts University, February 2011 &#151;	 Present </h3>
+<h3><span class="bold"> Club Baseball</span>, Tufts University, February 2011 &#8212;	 Present </h3>
