--- a/germinate/index.html
+++ b/germinate/index.html
@@ -31,7 +31,7 @@ When you have full bars of both water and suger you are able to germinate, thus 
 <br><img src="germinatePics/growTree.png"></h2>
 <br><h2>At night, sugars won't be made!
 <br><img src="germinatePics/night.png"></h2>
-<br><h2>Watch the rain boost your water supply! When all your resource supplies fill up... 
+<br><h2>Watch the rain boost your water supply! When all your resource stores fill up... 
 <br><img src="germinatePics/readyGerminate.png"></h2>
 <br><h2> Germinate!
 <br><img src="germinatePics/gameWin.png"></h2>
