more html tweaks

--- a/germinate/index.html
+++ b/germinate/index.html
@@ -31,6 +31,8 @@ When you have full bars of both water and suger you are able to germinate, thus 
 <br><img src="germinatePics/growTree.png"></h2>
 <br><h2>At night, sugars won't be made!
 <br><img src="germinatePics/night.png"></h2>
+<br><h2>Don't let your tree's health get to 0!
+<br><img src="germinatePics/gameLose.png"></h2>
 <br><h2>Watch the rain boost your water supply! When all your resource stores fill up... 
 <br><img src="germinatePics/readyGerminate.png"></h2>
 <br><h2> Germinate!
