--- a/germinate/index.html
+++ b/germinate/index.html
@@ -29,7 +29,7 @@ When you have full bars of both water and suger you are able to germinate, thus 
 <br><img src="germinatePics/start.png"></h2>
 <br> <h2>Grow your tree larger!
 <br><img src="germinatePics/growTree.png"></h2>
-<br><h2>At night, sugars won't be made!
+<br><h2>At night sugar production slows down greatly!
 <br><img src="germinatePics/night.png"></h2>
 <br><h2>Don't let your tree's health get to 0!
 <br><img src="germinatePics/gameLose.png"></h2>
